# IPC

./: 16signal.cpp  17signal.cpp  18alarm.cpp  19sigprocmask.cpp  20sigaction.cpp  20sigaction2.cpp  21sigaction_recv.cpp  21sigaction_recv2.cpp  21sigaction_send.cpp  21sigaction_send2.cpp  23exec.cpp  23pip3.cpp  23pipe.cpp  23pipe2.cpp  24pipe.cpp  24pipe2.cpp  25FIFO_R.cpp  25FIFO_W.cpp  25msg_get.cpp  25msg_rmid.cpp  25msg_set.cpp  25msg_stat.cpp  26msg_recv.cpp  26msg_send.cpp  27msg_echocli.cpp  27msg_echosrv.cpp  28mmap_read.cpp  28mmap_write.cpp  29shm_read.cpp  29shm_write.cpp  30sem.cpp  30semtool.cpp  32sem_philosopher.cpp  CMakeLists.txt  common.h
